samples/_failures_safe/1761507352_cb8cbf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc3e7293.c: In function ‘main’:
./samples/SAFE/__tmp_fc3e7293.c:158:13: error: expected declaration or statement at end of input
  158 |             print_matrix(&result, "Result");
      |             ^~~~~~~~~~~~
./samples/SAFE/__tmp_fc3e7293.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc3e7293.c:158:13: error: expected declaration or statement at end of input
